test/res/error/cd3_res2.tmp
[04m[00;31mError: [00mno such file or directory:  [1;32m([00m/Users/ptruffau/42sh/test/coucou[1;32m)[00m
